<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="Router" Id="{eef1a3d7-d594-4dce-9023-a103737c3b29}">
    <Declaration><![CDATA[TYPE Router :
STRUCT
		MesWatchdog	        : BOOL ; 	(* Watchdog*)
		
		MesAlarmCode		: WORD ;	(* (NA) Internal Akuo AlarmCode		*)
		MesWarningCode		: WORD ; 	(* (NA) Internal Akuo WarningCode   *)
		MesEventCode		: WORD ; 	(* (NA) Internal Akuo EventCode	    *)
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>











