<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="Router_Standard" Id="{1690eb5b-e58e-4777-8cd6-290d6224bc51}">
    <Declaration><![CDATA[TYPE Router_Standard :
STRUCT
		MesData				: Router ;  (* Object *)

		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>




